# leetcode

./: .clang-tidy  .gitignore  .tasks  .vimspector.json  CMakeLists.txt  Cargo.toml  LEARN.iuml  LEARN.md  Makefile  README.md  README.plantuml  cjpm.toml  rustfmt.toml
.github/workflows/: cc.yaml  ci.yaml  cj.yaml  go.yaml  rust.yaml  ts.yaml
.zed/: debug.json
cc/: .gitignore  100_same_tree.cc  101_symmetric_tree.cc  1028_recover_a_tree_from_preorder_traversal.cc  102_binary_tree_level_order_traversal.cc  103_binary_tree_zigzag_level_order_traversal.cc  1046_last_stone_weight.cc  1047_remove_all_duplicates_in_string.cc  1048_longest_string_chain.cc  104_maximum_depth_of_binary_tree.cc  105_construct_binary_tree_from_preorder_and_inorder_tranversal.cc  1079_letter_tile_possibilities.cc  108_convert_sorted_array_to_binary_tree.cc  1091_shortest_path_in_binary_matrix.cc  1092_shortest_common_supersequence.cc  10_container_with_most_water.cc  1110_delete_nodes_and_return_forest.cc  1111_maximum_nesting_depth_of_two_valid_parentheses_strings.cc  1137_n_th_tribonacci_number.cc  113_path_sum_ii.cc  114_flatten_binary_tree_to_linked_list.cc  117_populating_next_right_pointers_in_each_node_ii.cc  1189_maximum_number_of_balloons.cc  118_pascals_triangle.cc  1192_critical_connections_in_a_network.cc  1209_remove_all_duplicates_in_string_ii.cc  120_triangle.cc  121_best_time_to_buy_and_sell_stock.cc  1220_count_vowels_permutation.cc  1235_maximum_profit_in_job_scheduling.cc  1239_Maximum_Length_of_a_Concatenated_String_with_Unique_Characters.cc  125_valid_palindrome.cc  1260_shift_2d_grid.cc  1261_find_elements_in_a_contaminated_binary_tree.cc  1268_search_suggestions_system.cc  126_word_ladder_ii.cc  127_word_ladder.cc  1288_remove_covered_intervals.cc  128_longest_consecutive_sequence.cc  12_integer_to_roman.cc  (+403 more)
cj/: .gitignore  cjpm.toml
cj/src/: main.cj  main_test.cj
csharp/: 79_reverse_string.cs  csharp.csproj
go/: lru.go  lru_test.go  simplfy_path.go  simplfy_path_test.go
hs/: .gitignore  LICENSE  hs.cabal  package.yaml  stack.yaml
hs/app/: Main.hs
hs/src/: Lib.hs
hs/test/: Spec.hs
leetcode/: 100_same_tree.cc  101_symmetric_tree.cc  102_binary_tree_level_order_traversal.cc  103_binary_tree_zigzag_level_order_traversal.cc  1046_last_stone_weight.cc  1047_remove_all_duplicates_in_string.cc  1048_longest_string_chain.cc  104_maximum_depth_of_binary_tree.cc  105_construct_binary_tree_from_preorder_and_inorder_tranversal.cc  108_convert_sorted_array_to_binary_tree.cc  1091_shortest_path_in_binary_matrix.cc  10_container_with_most_water.cc  1110_delete_nodes_and_return_forest.cc  1111_maximum_nesting_depth_of_two_valid_parentheses_strings.cc  1137_n_th_tribonacci_number.cc  113_path_sum_ii.cc  114_flatten_binary_tree_to_linked_list.cc  117_populating_next_right_pointers_in_each_node_ii.cc  118_pascals_triangle.cc  1192_critical_connections_in_a_network.cc  1209_remove_all_duplicates_in_string_ii.cc  120_triangle.cc  121_best_time_to_buy_and_sell_stock.cc  1220_count_vowels_permutation.cc  1235_maximum_profit_in_job_scheduling.cc  12393_shortest_path_in_a_grid_with_obstacles_elimination.cpp  1239_Maximum_Length_of_a_Concatenated_String_with_Unique_Characters.cc  125_valid_palindrome.cc  1268_search_suggestions_system.cc  126_word_ladder_ii.cc  127_word_ladder.cc  128_longest_consecutive_sequence.cc  12_integer_to_roman.cc  1302_deepest_leaves_sum.cc  131_palindrome_partitioning.cc  1328_brak_a_palindrome.cc  1329_sort_the_matrix_diagonally.cc  132_palindrome_partitioning_ii.cc  1332_remove_palindromic_subsequences.cc  1335_minimum_difficulty_of_a_job_schedule.cc  (+365 more)
md/: backend-arch.drawio
py/: pull.py
ra/: .gitignore  index.html  package.json  tsconfig.json
ra/src/: App.css  App.tsx  global.d.ts
rs/: lib.rs
rs/classic/: char_size.rs  dyn_t.rs  edit_distance.rs  fibonacci.rs  fibonacci_bench.rs  find_media_sorted_arrays.rs  graph_has_circle.rs  iteration.rs  link_list.rs  mod.rs  permutation.rs  producer_consumer.rs  sort_algorithm.rs  str.rs  str_to_hashmap.rs  sum.rs  trie.rs
rs/leetcode/: leetcode_100_same_tree.rs  leetcode_101_symmetric_tree.rs  leetcode_1046_last_stone_weight.rs  leetcode_106_construct_binary_tree_from_inorder_and_postorder_traversal.rs  leetcode_1071_greatest_common_driver_of_strings.rs  leetcode_1143_longest_common_subsequence.rs  leetcode_114_flatten_binary_tree_to_linked_list.rs  leetcode_1171_remove_zero_sum_consecutive_nodes_from_linked_list.rs  leetcode_1207_unique_number_of_occurrences.rs  leetcode_1224_maximum_equal_frequency.rs  leetcode_124_binary_tree_maximum_path_sum.rs  leetcode_1254_number_of_closed_islands.rs  leetcode_1255_maximum_score_words_formed_by_letters.rs  leetcode_129_sum_root_to_leaf_numbers.rs  leetcode_1319_number_of_operations_to_make_network_connected.rs  leetcode_1339_maximum_product_of_splitted_binary_tree.rs  leetcode_1345_jump_game_iv.rs  leetcode_134_gas_station.rs  leetcode_1367_linked_list_in_binary_tree.rs  leetcode_1448_count_good_nodes_in_binary_tree.rs  leetcode_1456_maximum_number_of_vowels_in_a_substring_of_given_length.rs  leetcode_1491_average_salary_excluding_the_minimum_and_maximum_salary.rs  leetcode_1519_number_of_nodes_in_the_subtree_with_same_label.rs  leetcode_1539_kth_missing_positive_number.rs  leetcode_153_find_minimum_in_rotated_sorted_array.rs  leetcode_1639_number_of_ways_to_form_a_target_string_given_a_dictionary.rs  leetcode_1657_determine_if_two_strings_are_close.rs  leetcode_1704_determine_if_string_halves_are_alike.rs  leetcode_1799_maximize_score_after_n_operations.rs  leetcode_1834_single_threaded_cpu.rs  leetcode_1857_largest_color_value_in_a_directed_graph.rs  leetcode_1962_remove_stones_to_minimize_the_total.rs  leetcode_19_remove_nth_node_from_end_of_list.rs  leetcode_200_number_of_islands.rs  leetcode_206_reverse_link_list.rs  leetcode_208_implement_trie_prefix_tree.rs  leetcode_2092_find_all_people_with_secret.rs  (+59 more)
scripts/: limit_vscode_cpu.sh  run-clang-tidy.py  thread_pool_test.py
sh/: em  zed.settings.json
src/: lib.rs
ts/: .gitignore  package.json  tsconfig.json
(+152 files in other folders)
